--- a/EstudosIA001.ipynb
+++ b/EstudosIA001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTlEeXI3ap0grQhi635flH",
+      "authorship_tag": "ABX9TyMqpBsjC/CgfUbxbvfhGhOG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,15 +50,26 @@
       "cell_type": "code",
       "source": [
         "import google.generativeai as genai\n",
-        "\n",
-        "GOOGLE_API_KEY=\"AIzaSyCtialy2gpzgdKGFeQA29w-tZbDFZVaSaE\"\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
+        "#GOOGLE_API_KEY=\"ZAIzaSyCtialy2gpzgdKGFeQA29w-tZbDFZVaSaE\"\n",
+        "genai.configure(api_key=api_key)"
       ],
       "metadata": {
         "id": "UF5WYhP1xFtV"
       },
-      "execution_count": 2,
+      "execution_count": 24,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Listar modelos disponíveis que possam gerar conteúdos\n",
+        "Desta forma saberemos qual o modelo ideal para o meu tipo de pesquisa"
+      ],
+      "metadata": {
+        "id": "kXPf_1oufHQs"
+      }
     },
     {
       "cell_type": "markdown",
@@ -250,20 +261,20 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 86
         },
         "id": "XvltkA5OBn-C",
-        "outputId": "25a22b47-740a-4f16-fb4f-604dc885d2de"
+        "outputId": "7e6265ae-176c-4253-df10-39527198387b"
       },
-      "execution_count": 9,
+      "execution_count": 26,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Resposta:  1 (Brasília) \n",
-            "\n",
-            "Resposta:  Não tenho acesso a informações em tempo real, portanto, não posso fornecer informações sobre o clima atual em Franca. Recomendo verificar a previsão do tempo em um site ou aplicativo meteorológico confiável. \n",
+            "Esperando Prompt: Quem foi o primeiro presidente do Brasil?\n",
+            "Resposta:  Deodoro da Fonseca \n",
             "\n",
             "Esperando Prompt: fim\n"
           ]
@@ -291,12 +302,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 285
+          "height": 411
         },
         "id": "hv4UTrj8Vp_A",
-        "outputId": "b8d61d1f-6825-4f7d-b4a5-615726c04ef5"
+        "outputId": "11321832-2a25-44bb-c19c-30f6eaaa97f2"
       },
-      "execution_count": 22,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -356,6 +367,40 @@
               "<IPython.core.display.Markdown object>"
             ],
             "text/markdown": ">   model  : Não tenho acesso a informações em tempo real, portanto, não posso fornecer informações sobre o clima atual em Franca. Recomendo verificar a previsão do tempo em um site ou aplicativo meteorológico confiável."
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------------------------------\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": ">   user  : Quem foi o primeiro presidente do Brasil?"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------------------------------\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": ">   model  : Deodoro da Fonseca"
           },
           "metadata": {}
         },
